# myudevmon

./: pyproject.toml
udevmon/: console.py
