[tool.poetry]
name = "udevmon"
version = "0.1.0"
description = ""
authors = ["Chen Yang <yangchen@thinkmore.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pyudev = "^0.24.1"
sh = "^2.0.6"

[tool.poetry.scripts]
myudevmon="udevmon.console:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
